--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Avttar Assignment-1</title>
+<title>Id generator</title>
 </head>
 <body>
 <center>
 <h2>ID generator</h2>
 <div id="main" >
 <form action="/" method="post">
-  <label for="name">Enter Your Name:</label><br/></br>
+  <label for="name">Type your name:</label><br/></br>
   <input type="text" id="name" name="name"><br/><br/>
   <input type="submit" value="Submit">
 </form> 
